[ADD, UP] Adicionando multi-pesquisas, melhorias na interface e codigo