@@ -4,6 +4,7 @@ import java.sql.SQLException;
 
 import com.rdr.avaliacao.es.bd.BancoDeDados;
 import com.rdr.avaliacao.es.bd.DAO;
+import com.rdr.avaliacao.es.bd.Recuperacao;
 
 public class Resposta {
 	private TipoResposta resposta;
@@ -40,8 +41,18 @@ public class Resposta {
 	
 	public void adicionarPergunta(int numeroPergunta) throws SQLException {
 		DAO dao =  new DAO(BancoDeDados.getBancoDeDados());
-		Object[][] resultado = dao.pesquisar("select  from pergunta where codigo = ? ", 
-				Integer.valueOf(numeroPergunta));
+		Object[][] resultado = dao.consultar(new Recuperacao() {
+			
+			@Override
+			public String selectQuery() {
+				return "select  from pergunta where codigo = ? ";
+			}
+			
+			@Override
+			public Object[] searchKeys() {
+				return new Object[] {new Integer(numeroPergunta)};
+			}
+		});
 		pergunta.setAssunto(resultado[1][0].toString());
 	}
 	
